--- a/plugins/btc_github_pr/app/views/pull_requests/index.html.erb
+++ b/plugins/btc_github_pr/app/views/pull_requests/index.html.erb
@@ -32,5 +32,5 @@
   
   <div id="difference_display">
     <h3> Files changes in pull request </h3><br>
-    <%= @pull_requests.first.difference_html.html_safe %>
+    <%= @pull_requests.first.difference_html.html_safe  if @pull_requests.present? %>
   </div>
