pr display files changes

--- a/plugins/btc_github_pr/app/views/pull_requests/_difference_display.html.erb
+++ b/plugins/btc_github_pr/app/views/pull_requests/_difference_display.html.erb
@@ -1,2 +1,2 @@
-    <h3> Files changes in pull request: </h3> <%= "##{@pull_request.no} #{@pull_request.title} " if @pull_request.present? %><hr><br>
-    <%= (@pull_request.present? ? @pull_request.difference_html : "<b> please select pull request for view difference</b>").html_safe %>
+    <h3> Files changes in pull request: </h3> <%= "##{pull_request.no} #{pull_request.title} " if pull_request.present? %><hr><br>
+    <%= (pull_request.present? ? pull_request.difference_html : "<b> please select pull request for view difference</b>").html_safe %>
