--- a/plugins/btc_github_pr/app/views/pull_requests/view_changed_files.js.erb
+++ b/plugins/btc_github_pr/app/views/pull_requests/view_changed_files.js.erb
@@ -1,1 +1,1 @@
-$("#difference_display").html("<%= escape_javascript(render partial: 'difference_display', locals: { items: @pull_request } ) %>"); 
+$("#difference_display").html("<%= escape_javascript(render partial: 'difference_display', locals: { pull_request: @pull_request } ) %>"); 
